fix: spacing in name and thickness of line

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -129,10 +129,10 @@
 }
 
 .mobile-nav-hr {
-    height: 0.5rem;
+    height: 0.25rem;
     background-color: var(--clr-accent);
     border: none;
-    border-radius: 0.5rem;
+    /* border-radius: 0.5rem; */
 }
 
 .mobile-nav-ul {
